# buffon-machines

./: .gitignore  .travis.yml  LICENSE  README.md  buffon-machines.cabal  stack.yaml
Data/Buffon/: Machine.hs
Data/Buffon/Internal/: Trie.hs
