name:           buffon-machines
version:        0.1.0.0
description:    Monadic implementation of Buffon machines meant for perfect simulation of discrete random variables
homepage:       https://github.com/maciej-bendkowski/buffon-machines#readme
bug-reports:    https://github.com/maciej-bendkowski/buffon-machines/issues
author:         Maciej Bendkowski
maintainer:     maciej.bendkowski@tcs.uj.edu.pl
copyright:      2019 Maciej Bendkowski
license:        BSD3
license-file:   LICENSE
category:       Math
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules: Data.Buffon.Machine
  build-depends:   random >= 1.1
                 , multiset >= 0.3.3
                 , base >=4.7 && <5
  ghc-options:   -O2
                 -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wredundant-constraints
  default-language: Haskell2010
